--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "file-loader": "^0.9.0",
     "lodash": "^4.15.0",
     "material-ui": "^0.15.4",
     "react": "^15.3.0",
