--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "axios": "^0.13.1",
     "babel-preset-stage-1": "^6.1.18",
     "file-loader": "^0.9.0",
     "lodash": "^4.15.0",
