--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": "",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "start": "node server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch",
     "build": "webpack --config ./webpack.config.js --progress --colors"
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.13.1",
     "babel-preset-stage-1": "^6.1.18",
+    "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "lodash": "^4.15.0",
     "material-ui": "^0.15.4",
